--- a/projet.html
+++ b/projet.html
@@ -10,9 +10,7 @@
 	 <!-- Corps de la page-->
       <body>
 		<div class="bandeau">
-			 <div class="petitPanier">Billets en vente exclusivement sur les
-lieux du festival: Monétay, Monteignet, Veauce  du 2 au 6 août dès 11h00
- et le 6 août à Moulins de 19h00 à 20h00.
+			 <div class="petitPanier">
 									Attention! à Moulins le début du spectacle à 20h00. <table></table></div><!-- class="petitPanier"-->
 										<h1> Festival Théâtres de Bourbon nouveau</h1>
 		</div><!--class="bandeau"-->
